# brkraw-viewer

./: .gitignore  .markdownlint.yaml  404.html  README.md  RELEASE_NOTES.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  release_on_merge.yml
dev/: label_paint_demo.py  label_print_demo.md  roadmap.md
dev/contributors/: index.html
dev/gui/: index.html
dev/hooks/: index.html
dev/release/: index.html
docs/: index.md
docs/dev/: contributors.md  gui.md  hooks.md  release.md
docs/extensions/: index.md
docs/stylesheets/: logo.css
docs/user/: addon-params.md  config.md  convert.md  info.md  viewer.md
extensions/: index.html
scripts/: release_pr.py  release_prep.py  smoke_addon.py  tag_and_push.py  verify_release_version.py
search/: search_index.json
src/brkraw_viewer/: __init__.py  app.py  app_config.py  app_convert.py  cli_viewer.py  cli_viewer_config.py  orientation.py  plugin.py  viewer_canvas.py
src/brkraw_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/brkraw_viewer/app/: bootstrap.py  protocols.py  state.py
src/brkraw_viewer/apps/: __init__.py  convert.py  viewer.py
src/brkraw_viewer/frames/: viewer_canvas.py  viewer_config.py
src/brkraw_viewer/ui/: assets.py
tests/: test_smoke_viewer.py
user/addon-params/: index.html
user/config/: index.html
user/convert/: index.html
user/viewer/: index.html
(+25 files in other folders)
