[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brkraw-viewer"
version = "0.1.0"
description = "BrkRaw scan viewer plugin for brkraw CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "brkraw>=0.5.0b1",
  "pillow>=10.0",
]
authors = [{name = "BrkRaw"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.entry-points."brkraw.cli"]
viewer = "brkraw_viewer.plugin:register"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
